Add better points in resume

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -90,7 +90,7 @@
         \color{em-light}\textbf{\\[-15pt]{\firamedium Professional Summary}\\[-18pt]}
     \end{LARGE}
 
-    \color{darkgrey}Site Reliability Engineer with five years of experience working in small teams that specialize in building reliable large-scale infrastructures to handle millions of users. A hard-working and lifelong learner proficient with the big 3 cloud providers and associated container orchestration tools (ECS, EKS, GKE, AKS).
+    \color{darkgrey}Site Reliability Engineer with five years of experience working in small teams that specialize in building large-scale infrastructures designed to handle millions of users.
 
     {\color{lightgrey}{\centerline{\rule{17cm}{0.4pt}}}}
 
@@ -101,41 +101,39 @@
     \textbf{{\firamedium Site Reliability Engineer II} \firabook{{\color{em-light}|} \textit{Mattermost}}}{\color{darkgrey}
     \hfill{\small{May 2022 to May 2023\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces in multiple Kubernetes clusters with {\firamedium 99.9\% uptime}.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Architected Mattermost deployment of production Kubernetes services to be managed by over {\firamedium 150 ArgoCD Applications}.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed {\firamedium custom Helm Charts} to allow other development teams to manage their services in a GitOps way.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Utilized Mattermost Operator to deploy, upgrade, and destroy Mattermost workspaces in multiple Kubernetes clusters.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Implemented cost cutting procedures in multiple AWS accounts to reduce Mattermost Cloud spending by {\firamedium 40\%}.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led initiative to convert Mattermost Calls Recorder to be a cloud-native application and host it within Kubernetes clusters.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Responded to high-priority system incidents and outages during weekly on-call rotations, {\firamedium improving system availability by 15\%}.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces in 6 Kubernetes clusters with {\firamedium 99.9\% uptime}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Conceptualized and executed a highly scalable and cost-effective deployment solution for the company's Kubernetes services; leveraging over {\firamedium 150 ArgoCD Applications}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Developed {\firamedium Helm Charts} used by 5+ development teams, promoting GitOps way of managing services and increasing code delivery efficiency by 20\%} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Deployed, maintained, and upgraded Mattermost Operator across 5 Kubernetes clusters, automating workspace creation and deletion, saving over 10 hours per week} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Implemented cost cutting procedures across AWS accounts to Mattermost Cloud; {\firamedium cutting spending by 40\%}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Collaborated with Calls team to build a cloud-native version of Mattermost Calls Recorder, resulting in improved scalability, reliability, and performance; {\firamedium reduced cost by 50\%}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Responded to high-priority system incidents and outages during weekly on-call rotations, {\firamedium improving system availability by 15\%}} & \\ [-10pt]
     \end{tabularx}\\
     }
     
     \textbf{{\firamedium DevOps Engineer} \firabook{{\color{em-light}|} \textit{Daylight}}}{\color{darkgrey}
     \hfill{\small{May 2020 to May 2022\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Planned migration of {\firamedium AWS ECS} services to {\firamedium Azure AKS} for all Daylight environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed architecture and deployment strategies for new Kubernetes environments in AKS.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained Shoppers Drug Mart COVID-19 testing and vaccination forms to over {\firamedium 3 million users}.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Migrated existing CloudFormation Troposphere scripts to Terraform to manage all new environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in {\firamedium SOC 2 Type 2} Certification and yearly audits.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained existing, and created new AWS environments for dedicated and multitenant clients.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Orchestrated the migration of AWS ECS services to Azure AKS for all Daylight environments; designed to decreased infrastructure costs by 10\% and improved scalability by 30\%} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Launched Shoppers Drug Mart COVID-19 testing and vaccination forms to over {\firamedium 3 million users}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Revamped existing CloudFormation Troposphere scripts using Terraform, cutting down new environment setup time by 80\%} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led yearly {\firamedium SOC 2 Type 2} audits for 2 years, collaborating with internal auditors to review and improve controls} & \\ [-10pt]
     \end{tabularx}\\
     }
     
     \textbf{{\firamedium DevOps Engineer} \firabook{{\color{em-light}|} \textit{Tulip Retail}}}{\color{darkgrey}
     \hfill{\small{January 2019 to April 2020\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed an SFTP Automation Framework leverging AWS services to {\firamedium reduce client-onboarding time by 20\%}.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Built CI/CD frameworks for internal projects and all serverless applications through use of GitLab CI that automatically tests and deploys new changes.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed new monitoring solution leveraging {\firamedium Prometheus}, {\firamedium Thanos}, {\firamedium Grafana}, and {\firamedium Alertmanager}.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Developed SFTP Automation Framework leveraging AWS services to {\firamedium reduce client onboarding time by 50\%}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Engineered and deployed CI/CD frameworks for 10+ serverless applications; utilized GitLab CI to automatically test and deploy new changes, reducing deployment time by 60\%} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Implemented a new monitoring solution that leveraged {\firamedium Prometheus}, {\firamedium Thanos}, {\firamedium Grafana}, and {\firamedium Alertmanager}} & \\ [-10pt]
     \end{tabularx}\\
     }
     
-    \textbf{{\firamedium Conference Speaker} \firabook{{\color{em-light}|} \textit{AWS Summit Toronto 2019}}}{\color{darkgrey}
+    \textbf{{\firamedium Conference Speaker} \firabook{{\color{em-light}|} \textit{AWS Summit Toronto}}}{\color{darkgrey}
     \hfill{\small{October 2019\\[5pt]}}
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & As a conference speaker in the Start-Up Booth at AWS Summit Toronto 2019 presented an {\firamedium SFTP Automation design} that solved the problem of creating custom SFTP Virtual Machine instances for each new customer. This was achieved by leveraging many tools such as {\firamedium Transfer for AWS}, {\firamedium Lambdas}, {\firamedium DynamoDB}, and {\firamedium SQS}. & \\[-10pt]
+        & Managed a cross-team effort that leveraged AWS services (Transfer for AWS, Lambdas, DynamoDB, SQS) to create a custom SFTP Automation solution that eliminated the need for manual setup of Virtual Machine instances; presented solution at AWS Summit Toronto 2019, reducing customer setup time from 2 weeks to 1. & \\[-10pt]
     \end{tabularx}\\
     }
 
@@ -147,7 +145,7 @@
     \end{LARGE}
 
     \begin{tabularx}{\textwidth}{llX}
-        \faCogs\space\space{\bfseries {\firamedium DevOps Tools}}
+        \faCogs\space\space{\bfseries {\firamedium Tools}}
             & {\color{darkgrey} \textbullet\space\space Prometheus, Thanos, Grafana, Loki, Tempo, Istio, GitLab CI, Github Actions, NGINX, Bash, Git} & \\[2pt]
             & {\color{darkgrey} \textbullet\space\space Kubernetes, Terraform, ArgoCD, Docker, Cloudflare, Packer, Helm, kOps, Teleport, KinD} & \\[4pt]
         \faLinux\space\space{\bfseries {\firamedium Environments}}
@@ -169,7 +167,7 @@
         \color{em-light}\textbf{\\[-15pt]{\firamedium Education}\\[-15pt]}
     \end{LARGE}
 
-    \textit{\textbf{{\firamedium University of Waterloo}}}{\color{darkgrey}{\hfill{\small{Graduated in 2018\\[0pt]}}
+    \textit{\textbf{{\firamedium University of Waterloo}}}{\color{darkgrey}{\hfill{\small{December 2018\\[0pt]}}
     Bachelor of Computer Science, Computer Science, Honours, Co-operative Program}\\[-15pt]}
     %%End%% Education
 }
