Add more changes

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -90,7 +90,7 @@
         \color{em-light}\textbf{\\[-15pt]{\firamedium Professional Summary}\\[-18pt]}
     \end{LARGE}
 
-    \color{darkgrey}Site Reliability Engineer with five years of experience working in small teams that specialize in building large-scale infrastructures designed to handle millions of users.
+    \color{darkgrey}Site Reliability Engineer with five years' experience building large-scale infrastructures designed to handle millions of users using container orchestration tools; launched Covid test and vaccination forms used by over 5 million unique users; became quickest team member to join on-call rotation after only 3 weeks. 
 
     {\color{lightgrey}{\centerline{\rule{17cm}{0.4pt}}}}
 
@@ -102,7 +102,7 @@
     \hfill{\small{May 2022 to May 2023\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces in 6 Kubernetes clusters with {\firamedium 99.9\% uptime}} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Conceptualized and executed a highly scalable and cost-effective deployment solution for the company's Kubernetes services; leveraging over {\firamedium 150 ArgoCD Applications}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led team to create a highly scalable and cost-effective deployment solution for the company's Kubernetes services; leveraging over {\firamedium 150 ArgoCD Applications}} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Developed {\firamedium Helm Charts} used by 5+ development teams, promoting GitOps way of managing services and increasing code delivery efficiency by 20\%} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Deployed, maintained, and upgraded Mattermost Operator across 5 Kubernetes clusters, automating workspace creation and deletion, saving over 10 hours per week} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Implemented cost cutting procedures across AWS accounts to Mattermost Cloud; {\firamedium cutting spending by 40\%}} & \\ [-5pt]
@@ -115,7 +115,7 @@
     \hfill{\small{May 2020 to May 2022\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Orchestrated the migration of AWS ECS services to Azure AKS for all Daylight environments; designed to decreased infrastructure costs by 10\% and improved scalability by 30\%} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Launched Shoppers Drug Mart COVID-19 testing and vaccination forms to over {\firamedium 3 million users}} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Launched Shoppers Drug Mart COVID-19 testing and vaccination forms to over {\firamedium 5 million users}} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Revamped existing CloudFormation Troposphere scripts using Terraform, cutting down new environment setup time by 80\%} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led yearly {\firamedium SOC 2 Type 2} audits for 2 years, collaborating with internal auditors to review and improve controls} & \\ [-10pt]
     \end{tabularx}\\
@@ -146,8 +146,8 @@
 
     \begin{tabularx}{\textwidth}{llX}
         \faCogs\space\space{\bfseries {\firamedium Tools}}
-            & {\color{darkgrey} \textbullet\space\space Prometheus, Thanos, Grafana, Loki, Tempo, Istio, GitLab CI, Github Actions, NGINX, Bash, Git} & \\[2pt]
-            & {\color{darkgrey} \textbullet\space\space Kubernetes, Terraform, ArgoCD, Docker, Cloudflare, Packer, Helm, kOps, Teleport, KinD} & \\[4pt]
+            & {\color{darkgrey} \textbullet\space\space Kubernetes, Terraform, ArgoCD, Docker, Cloudflare, Packer, Helm, kOps, Teleport, KinD} & \\[2pt]
+            & {\color{darkgrey} \textbullet\space\space Prometheus, Thanos, Grafana, Loki, Tempo, Istio, GitLab CI, Github Actions, NGINX, Bash, Git} & \\[4pt]
         \faLinux\space\space{\bfseries {\firamedium Environments}}
             & {\color{darkgrey} \textbullet\space\space AWS (5+ years), Azure (2+ years), GCP (2+ years), Amazon Linux, Ubuntu, Debian, macOS} & \\[4pt]
         \faDesktop\space\space{\bfseries {\firamedium Back End}}
@@ -164,7 +164,7 @@
     %%Begin%% Education
     {\color{lightgrey}{\centerline{\rule{17cm}{0.1pt}}}}
     \begin{LARGE}
-        \color{em-light}\textbf{\\[-15pt]{\firamedium Education}\\[-15pt]}
+        \color{em-light}\textbf{\\[-15pt]{\firamedium Education}\\[-20pt]}
     \end{LARGE}
 
     \textit{\textbf{{\firamedium University of Waterloo}}}{\color{darkgrey}{\hfill{\small{December 2018\\[0pt]}}
